# agentic.ai

./: LICENSE.md  README.md  pyproject.toml
conf/: config.yaml
notebook/: vision_rover.ipynb  web_rover.ipynb  web_rover_v1.ipynb
source/: vision_rover.py
