[project]
name = "agentic-ai"
version = "0.1.0"
description = "Agentic application using LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "attrdict>=2.0.1",
    "bitsandbytes>=0.45.3",
    "cohere>=5.14.0",
    "datasets>=3.3.2",
    "einops>=0.8.1",
    "fireducks>=1.2.4",
    "flash-attn>=2.7.4.post1",
    "gradio>=5.1.0",
    "helium>=5.1.1",
    "langchain>=0.3.20",
    "langchain-cohere>=0.4.2",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "ninja>=1.11.1.3",
    "openai>=1.65.4",
    "packaging>=24.2",
    "pdf2image>=1.17.0",
    "playwright>=1.50.0",
    "pylint>=3.3.4",
    "pytest-playwright>=0.7.0",
    "qwen-agent[code-interpreter,python-executor,rag]>=0.0.12",
    "qwen-vl-utils[decord]>=0.0.8",
    "ruff>=0.9.10",
    "rust-just>=1.39.0",
    "sentencepiece>=0.2.0",
    "setuptools>=75.8.2",
    "smolagents>=1.10.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers",
    "wheel>=0.45.1",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
extend-include = ["*.ipynb"]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN001", "ANN101", "ANN201", "ANN202", "B006", "BLE001", "E402", "PD901", "PLR0913", "S101", "S311", "T201"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*.py" = ["D103"]

[tool.pyright]
venvPath = "./../."
venv = ".venv"
typeCheckingMode = "off"

[tool.pyright.diagnosticSeverityOverrides]
reportCallIssue = "off"

[tool.pytest.ini_options]
pythonpath="pipelines"
addopts="--maxfail=2 -rf -W ignore::DeprecationWarning"
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')"
]
